<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.personalfinance.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.personalfinance.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_earning"
        android:name="com.example.personalfinance.ui.earning.EarningFragment"
        android:label="@string/title_earning"
        tools:layout="@layout/fragment_earning" />
    <fragment
        android:id="@+id/navigation_spending"
        android:name="com.example.personalfinance.ui.spending.SpendingFragment"
        android:label="@string/title_spending"
        tools:layout="@layout/spending_fragment" />
    <fragment
        android:id="@+id/navigation_lending"
        android:name="com.example.personalfinance.ui.lending.LendingFragment"
        android:label="@string/title_lending"
        tools:layout="@layout/lending_fragment" />
</navigation>
